--- a/translations/kangyur/translations/089-013_toh556-the_sutra_of_the_sublime_golden_light_2.xml
+++ b/translations/kangyur/translations/089-013_toh556-the_sutra_of_the_sublime_golden_light_2.xml
@@ -37,7 +37,7 @@
                 <sponsor xml:id="UT22084-089-013-6">E E, May-E, Minda, Chung-Da Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2024</date>
+                <edition>v 1.0.7 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -167,6 +167,9 @@
                     <desc>minor edit to glossary</desc>
                 </change>
                 <change who="#celso" when="2024-12-30T18:59:30.682Z" type="text-version" status="1.0.6" xml:id="UT22084-089-013-3284">
+                    <desc>minor correction</desc>
+                </change>
+                <change who="#celso" when="2025-01-01T13:12:50.592Z" type="text-version" status="1.0.7" xml:id="UT22084-089-013-3285">
                     <desc>minor correction</desc>
                 </change>
             </revisionDesc>
@@ -307,7 +310,7 @@
                         passage being within the chapter on the lifespan of the Buddha. The sūtra’s significance in later Indian Buddhism is evident
                         from the three tantras<note place="end" xml:id="UT22084-089-013-63"> (1) <title xml:lang="en">The Root Manual of the Rites of
                                 Mañjuśrī</title> (<title xml:lang="Sa-Ltn">Mañjuśrī­mūla­kalpa</title>, Toh 543), <ptr target="#UT22084-088-038-725"/><!--2.129-->; (2) <title xml:lang="Bo-Ltn">ral pa gyen brdzes kyi rtog pa chen po byang chub sems dpa’ chen po’i rnam
-                                par ’phrul pa le’u rab ’byams las bcom ldan ’das ma ’phags ma sgrol ma’i rtsa ba’i rtog pa</title> (<title xml:lang="Sa-Ltn">Ūrdhvajaṭā-mahā­kalpa­mahā­bodhi­sattva­vikurvaṇapaṭalavisarā bhāgavatī
+                                par ’phrul pa le’u rab ’byams las bcom ldan ’das ma ’phags ma sgrol ma’i rtsa ba’i rtog pa</title> (<title xml:lang="Sa-Ltn">Ūrdhvajaṭā-mahā­kalpa­mahā­bodhi­sattva­vikurvaṇapaṭalavisarā bhagavatī
                             āryatārā­mūla­kalpa</title>), <ref rend="pending" target="https://read.84000.co/translation/toh724.html">Toh 724</ref>,
                             folio 238.a; (3) <title xml:lang="Bo-Ltn">dkyil ’khor thams cad kyi spyi’i cho ga gsang ba’i rgyud</title> (<title xml:lang="Sa-Ltn">Sarva­maṇḍala­sāmānyavidhi­guhya­tantra</title>), <ref rend="pending" target="https://read.84000.co/translation/toh806.html">Toh 806</ref>, folio 152.b.</note> and ten commentaries<note place="end" xml:id="UT22084-089-013-64"> (1) Vinayadatta, <title xml:lang="Bo-Ltn">sgyu ’phrul chen mo’i dkyil ’khor gyi
                                 cho ga bla ma’i zhal snga’i man ngag</title> (<title xml:lang="Sa-Ltn">Gurūpadeśa­nāma­mahā­māyā­maṇḍalopāyikā</title>), <ref rend="pending" target="https://read.84000.co/translation/toh1645.html">Toh 1645</ref>, folio 209.a; (2) Bhavyakīrti, <title xml:lang="Bo-Ltn">sgron ma gsal bar byed pa dgongs pa rab gsal zhes bya ba bshad pa’i ti ka</title> (<title xml:lang="Sa-Ltn">Pradīpoddyotanābhisaṃdhi­prakāśikā­nāma­vyākhyā­ṭīkā</title>), <ref target="https://read.84000.co/translation/toh1793.html" rend="pending">Toh 1793</ref>, folio 201.a; (3)
@@ -10916,7 +10919,7 @@
                             <bibl xml:id="UT22084-089-013-2374">
                                 <title xml:lang="Bo-Ltn">ral pa gyen brdzes kyi rtog pa chen po byang chub sems dpa’
                                     chen po’i rnam par ’phrul pa le’u rab ’byams las bcom ldan ’das ma ’phags ma sgrol ma’i rtsa ba’i rtog pa zhes bya
-                                    ba</title> (<title xml:lang="Sa-Ltn">Ūrdhvajaṭā­mahā­kalpa­mahā­bodhi­sattva­vikurvaṇa­paṭalavisarā bhāgavatī
+                                    ba</title> (<title xml:lang="Sa-Ltn">Ūrdhvajaṭā­mahā­kalpa­mahā­bodhi­sattva­vikurvaṇa­paṭalavisarā bhagavatī
                                     ārya­tārā­mūla­kalpa­nāma</title>). Toh 724, Degé Kangyur vol. 93 (rgyud, tsa), folios 205.b–311.a, and vol. 94
                                 (rgyud, tsha), folios 1.a–200.a.<ref rend="pending" target="https://read.84000.co/translation/toh724"/>
                             </bibl>
