--- a/translations/kangyur/placeholders/035-024_toh44-24-chapter_24_the_emanation_in_suyama.xml
+++ b/translations/kangyur/placeholders/035-024_toh44-24-chapter_24_the_emanation_in_suyama.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-035-024-6">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-035-024"/>
             </publicationStmt>
             <sourceDesc>
@@ -45,6 +45,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-11-29T13:46:05.585Z" type="text-version" status="0.0.4" xml:id="UT22084-035-024-7">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T12:02:48.591Z" type="translation-status" status="2.h" xml:id="UT22084-035-024-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T12:02:48.591Z" type="text-version" status="0.0.5" xml:id="UT22084-035-024-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
