--- a/translations/kangyur/placeholders/095-006_toh751,946-the_incantation_the_palace_on_the_peak_of_the_great_vajra_meru.xml
+++ b/translations/kangyur/placeholders/095-006_toh751,946-the_incantation_the_palace_on_the_peak_of_the_great_vajra_meru.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-095-006-2">Nicholas Schmidt</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-095-006"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +66,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-28T08:38:43.483Z" type="text-version" status="0.0.5" xml:id="UT22084-095-006-9">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T12:43:45.282Z" type="translation-status" status="2.h" xml:id="UT22084-095-006-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T12:43:45.282Z" type="text-version" status="0.0.6" xml:id="UT22084-095-006-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
