--- a/translations/tengyur/placeholders/052-007_toh2266-kakhasya_doha.xml
+++ b/translations/tengyur/placeholders/052-007_toh2266-kakhasya_doha.xml
@@ -11,19 +11,20 @@
                 <title type="longTitle" xml:lang="Sa-Ltn">Kakhasya dohā­nāma</title>
                 <title type="longTitle" xml:lang="bo">ཀ་ཁའི་དོ་ཧ་ཞེས་བྱ་བ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">ka kha'i do ha zhes bya ba/</title>
-                <author role="translatorMain" xml:id="UT23703-052-007-1"/>
+                <author role="translatorMain" xml:id="UT23703-052-007-1">Subhāṣita Translation Group</author>
                 <author role="translatorEng" xml:id="UT23703-052-007-2">Lara Braitstein</author>
                 <author role="translatorEng" xml:id="UT23703-052-007-3">Benjamin Ewing</author>
                 <author role="translatorEng" xml:id="UT23703-052-007-4">Lowell Cook</author>
                 <consultant role="projectManager" xml:id="UT23703-052-007-5">Benjamin Ewing</consultant>
                 <author role="translatorEng" xml:id="UT23703-052-007-6">Julia Stenzel</author>
+                <editor role="associateEditor" xml:id="UT23703-052-007-27">Jeremy Manheim</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT23703-052-007"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +77,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-18T13:31:31.544Z" type="text-version" status="0.0.8" xml:id="UT23703-052-007-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T13:32:10.185Z" type="text-version" status="0.0.9" xml:id="UT23703-052-007-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T15:02:13.114Z" type="translation-status" status="2.f" xml:id="UT23703-052-007-29">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T15:02:13.114Z" type="text-version" status="0.0.10" xml:id="UT23703-052-007-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
