--- a/translations/tengyur/placeholders/052-008_toh2267-kakhasya_dohatippana.xml
+++ b/translations/tengyur/placeholders/052-008_toh2267-kakhasya_dohatippana.xml
@@ -6,21 +6,22 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Commentary to “The Abecedarian Dohā”</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Kakhasya doha­ṭippaṇī</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">ka kha'i do ha'i bshad pa bris pa/</title>
                 <title type="mainTitle" xml:lang="bo">ཀ་ཁའི་དོ་ཧའི་བཤད་པ་བྲིས་པ།</title>
-                <author role="translatorMain" xml:id="UT23703-052-008-1"/>
+                <title type="mainTitle" xml:lang="Bo-Ltn">ka kha'i do ha'i bshad pa bris pa/</title>
+                <author role="translatorMain" xml:id="UT23703-052-008-1">Subhāṣita Translation Group</author>
                 <author role="translatorEng" xml:id="UT23703-052-008-2">Benjamin Ewing</author>
                 <author role="translatorEng" xml:id="UT23703-052-008-3">Lara Braitstein</author>
                 <author role="translatorEng" xml:id="UT23703-052-008-4">Lowell Cook</author>
                 <consultant role="projectManager" xml:id="UT23703-052-008-5">Benjamin Ewing</consultant>
                 <author role="translatorEng" xml:id="UT23703-052-008-6">Julia Stenzel</author>
+                <editor role="associateEditor" xml:id="UT23703-052-008-29">Jeremy Manheim</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT23703-052-008"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-18T13:33:21.197Z" type="text-version" status="0.0.10" xml:id="UT23703-052-008-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T13:34:01.764Z" type="text-version" status="0.0.11" xml:id="UT23703-052-008-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T15:03:17.752Z" type="translation-status" status="2.f" xml:id="UT23703-052-008-31">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-02T15:03:17.752Z" type="text-version" status="0.0.12" xml:id="UT23703-052-008-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
