--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-091-006-5">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-091-006-14">Torsten Gerloff</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-006-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-006-35">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -106,6 +107,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-12-16T15:58:25.076Z" type="text-version" status="0.0.12" xml:id="UT22084-091-006-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:59:16.277Z" type="text-version" status="0.0.13" xml:id="UT22084-091-006-36">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-03T10:26:38.642Z" type="translation-status" status="2.a" xml:id="UT22084-091-006-37">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-03T10:26:38.642Z" type="text-version" status="0.0.14" xml:id="UT22084-091-006-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
