--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-096-010-2">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-096-010-13">Torsten Gerloff</editor>
                 <editor role="copyEditor" xml:id="UT22084-096-010-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-096-010-34">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-096-010"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +95,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-12-16T16:00:23.022Z" type="text-version" status="0.0.12" xml:id="UT22084-096-010-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:01:11.408Z" type="text-version" status="0.0.13" xml:id="UT22084-096-010-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-03T10:28:08.136Z" type="translation-status" status="2.a" xml:id="UT22084-096-010-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-03T10:28:08.136Z" type="text-version" status="0.0.14" xml:id="UT22084-096-010-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
