--- a/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-096-011-5">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-096-011-11">Torsten Gerloff</editor>
                 <editor role="copyEditor" xml:id="UT22084-096-011-20">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-096-011-32">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-096-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -88,6 +89,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-12-16T16:06:20.993Z" type="text-version" status="0.0.10" xml:id="UT22084-096-011-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:06:56.825Z" type="text-version" status="0.0.11" xml:id="UT22084-096-011-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-03T10:29:22.174Z" type="translation-status" status="2.a" xml:id="UT22084-096-011-34">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-03T10:29:22.174Z" type="text-version" status="0.0.12" xml:id="UT22084-096-011-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
