--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-001-001-133560">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.37.17 <date>2025</date>
+                <edition>v 1.37.18 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -260,7 +260,10 @@
                     <desc>updated milestone 1.365.</desc>
                 </change>
                 <change who="#john" when="2025-01-04T17:31:30.006Z" type="text-version" status="1.37.17" xml:id="UT22084-001-001-133630">
-                    <desc>Changed "section index" (bar sdom) to "intervening summary." 3 instances.</desc>
+                    <desc>Changed "section index" (bar sdom) to "intervening summary." 3 instances + glossary.</desc>
+                </change>
+                <change who="#john" when="2025-01-04T17:34:31.618Z" type="text-version" status="1.37.18" xml:id="UT22084-001-001-133631">
+                    <desc>Further minor edit.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -10884,7 +10887,7 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-001-001-2542">
-                            <term type="translationMain">section index</term>
+                            <term type="translationMain">intervening summary</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">antaroddāna</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bar sdom</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བར་སྡོམ།</term>
