--- a/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
+++ b/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
@@ -23,11 +23,11 @@
                 <editor role="projectEditor" xml:id="UT22084-065-005-32">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-065-005"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +86,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-31T09:58:22.982Z" type="text-version" status="0.0.9" xml:id="UT22084-065-005-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-06T09:28:07.686Z" type="translation-status" status="2.d" xml:id="UT22084-065-005-36">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-06T09:28:07.686Z" type="text-version" status="0.0.10" xml:id="UT22084-065-005-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
