--- a/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
+++ b/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<TEI xmlns="http://www.tei-c.org/ns/1.0">
+<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
             <titleStmt>
@@ -22,12 +22,12 @@
                 <editor role="reviser" xml:id="UT22084-065-005-9">Joshua Shelton</editor>
                 <editor role="projectEditor" xml:id="UT22084-065-005-32">Rory Lindsay</editor>
             </titleStmt>
-    <editionStmt>
+            <editionStmt>
                 <edition>v 0.0.10 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-065-005"/>
                 <date/>
             </publicationStmt>
@@ -88,10 +88,10 @@
                 <change who="#line-tofte" when="2024-10-31T09:58:22.982Z" type="text-version" status="0.0.9" xml:id="UT22084-065-005-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
-                <change who="#line-tofte" when="2025-01-06T09:28:07.686Z" type="translation-status" status="2.d" xml:id="UT22084-065-005-36">
-                    <desc>2.d</desc>
+                <change who="#admin" when="2025-01-06T09:38:05.279Z" type="translation-status" status="2.h" xml:id="UT22084-065-005-36">
+                    <desc>2.h</desc>
                 </change>
-                <change who="#line-tofte" when="2025-01-06T09:28:07.686Z" type="text-version" status="0.0.10" xml:id="UT22084-065-005-37">
+                <change who="#admin" when="2025-01-06T09:38:05.279Z" type="text-version" status="0.0.10" xml:id="UT22084-065-005-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
@@ -100,4 +100,4 @@
     <text>
         <front/>
     </text>
-</TEI>
+</tei:TEI>
