--- a/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
+++ b/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
@@ -27,7 +27,7 @@
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-065-005"/>
                 <date/>
             </publicationStmt>
@@ -88,10 +88,10 @@
                 <change who="#line-tofte" when="2024-10-31T09:58:22.982Z" type="text-version" status="0.0.9" xml:id="UT22084-065-005-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
-                <change who="#admin" when="2025-01-06T09:38:05.279Z" type="translation-status" status="2.h" xml:id="UT22084-065-005-36">
-                    <desc>2.h</desc>
+                <change who="#admin" when="2025-01-06T10:22:49.499Z" type="translation-status" status="2.d" xml:id="UT22084-065-005-36">
+                    <desc>2.d</desc>
                 </change>
-                <change who="#admin" when="2025-01-06T09:38:05.279Z" type="text-version" status="0.0.10" xml:id="UT22084-065-005-37">
+                <change who="#admin" when="2025-01-06T10:22:49.499Z" type="text-version" status="0.0.10" xml:id="UT22084-065-005-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
