--- a/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
@@ -14,13 +14,14 @@
                 <author role="translatorMain" xml:id="UT22084-088-013-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-013-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-013-14">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-013-23">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-013"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +87,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-26T10:06:25.347Z" type="text-version" status="0.0.9" xml:id="UT22084-088-013-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:07:02.119Z" type="text-version" status="0.0.10" xml:id="UT22084-088-013-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-06T11:39:21.498Z" type="translation-status" status="2.d" xml:id="UT22084-088-013-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-06T11:39:21.498Z" type="text-version" status="0.0.11" xml:id="UT22084-088-013-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
