--- a/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
+++ b/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
@@ -18,11 +18,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-036-14">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2025</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-036"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-24T08:43:10.012Z" type="text-version" status="0.0.8" xml:id="UT22084-088-036-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-06T11:43:18.792Z" type="translation-status" status="2.d" xml:id="UT22084-088-036-18">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2025-01-06T11:43:18.792Z" type="text-version" status="0.0.9" xml:id="UT22084-088-036-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
